[workspace]
members = ["src/rust"]

# [patch."https://github.com/caiz/rs-soroban-env"]
# soroban-env-common = { path = "../rs-soroban-env/soroban-env-common" }
# soroban-env-host = { path = "../rs-soroban-env/soroban-env-host/" }

# [patch."https://github.com/caiz/rs-caiz-xdr"]
# caiz-xdr = { path = "../rs-caiz-xdr/" }

# [patch.crates-io]
# caiz-xdr = { git = "https://github.com/caiz/rs-caiz-xdr", rev = "2775f4b6" }
# wasmi = { package = "soroban-wasmi", git = "https://github.com/caiz/wasmi", rev = "862b32f5" }
# soroban-env-common = { git = "https://github.com/caiz/rs-soroban-env", rev = "eda2ab70" }
# soroban-native-sdk-macros = { git = "https://github.com/caiz/rs-soroban-env", rev = "eda2ab70" }

[profile.release]
codegen-units = 1
lto = true
